fix: fix title overflow

--- a/src/components/title-bar/styles/title-bar.module.css
+++ b/src/components/title-bar/styles/title-bar.module.css
@@ -1,24 +1,19 @@
 .titleBar {
     display: flex;
     flex-grow: 1;
+    min-inline-size: 0;
     justify-content: flex-start;
-    /* Same amount of whitespace as the expanded canvas button */
-    padding-inline-end: 28px;
-}
-
-.titleBar > .buttonContainer {
-    display: flex;
-    flex-grow: 0;
-    padding: 0 4px;
 }
 
 .titleBar > .titleContainer {
     display: flex;
     flex-grow: 1;
+    min-inline-size: 0;
 }
 
 .cell {
     display: flex;
+    min-inline-size: 0;
     align-items: center;
     background-color: var(--colors-white);
     padding: 6px;
@@ -30,6 +25,10 @@
     font-size: 13px;
     font-weight: 500;
     color: var(--colors-grey800);
+    min-inline-size: 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .suffix {
